# fildesh

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  CMakeLists.txt  LICENSE  MODULE.bazel  Makefile  Makefile.raw  README.md  SECURITY.md  WORKSPACE.bazel  add.c  assoc.h  best-match.c  bstree.c  bstree.h  cat1.c  chatty.c  cx.c  cycle.lace  def.bzl  def.h  defs.bzl  echo.c  execfd.c  fileb.h  format-names.lace  futil.c  futil.h  godo.c  lab.lace  lace.c  pair-up.lace  pairgen.lace  pairs  pairup.lace  printhw.lace  rbtree.c  rbtree.h  (+13 more)
builtin/: BUILD  CMakeLists.txt  add.c  bestmatch.c  cmp.c  elastic_pthread.c  seq.c  sponge.c  time2sec.c  transpose.c  ujoin.c  void.c  zec.c
compat/: BUILD  BUILD.bazel  CMakeLists.txt  env.c  errno.c  fd.c  fd_exclusive.h  file.c  kill.c  random.c  sh.c  string.c  tmpdir.c
pkg/vim/: CMakeLists.txt  common.fildesh  install_home.fildesh  unistall_home.fildesh
src/: BUILD  BUILD.bazel  CMakeLists.txt  add.c  alloc.c  best-match.c  cat1.c  chatty.c  comparispawn.bzl  comparispawn.c  compatible_pthread.h  echo.c  elastic.c  elastic_aio.c  elastic_poll.c  elastic_pthread.c  execfd.c  fildesh.c  godo.c  infile.c  instream.c  kv_single_list.c  kve.c  kve.h  lace.c  log.c  main_fildesh.c  main_lace.c  outfile.c  outstream.c  parse_fildesh.c  parse_fildesh.h  ssh-all.c  string.c  time2sec.c  transpose.c  ujoin.c  utilace.h  void.c  waitdo.c  (+3 more)
src/builtin/: BUILD.bazel  CMakeLists.txt  add.c  bestmatch.c  cmp.c  cmptxt.c  delimend.c  elastic_pthread.c  expect_failure.c  fildesh_builtin.c  fildesh_builtin.h  oargz.c  replace_string.c  seq.c  sponge.c  sxpb2json.c  sxpb2txtpb.c  sxproto2textproto.c  time2sec.c  transpose.c  ujoin.c  void.c  zec.c
src/cx/: BUILD  BUILD.bazel  CMakeLists.txt  alphatab.c  alphatab.h  bittable_test.c  def.h  fileb.c  fileb.h  fileb_test.c  int_int_map.c  lgtable_test.c  ofile.c  ofile.h  ospc.c  ospc_test.c  rbtree_test.c  synhax.h  syscx.c  syscx.h  table.h  table_test.c  tmpdir_test.c  urandom.c  xfile.c  xfile.h
src/lib/: BUILD.bazel  CMakeLists.txt  alloc.c  array.c  infile.c  instream.c  kv.c  kv.h  kv_broadleaf.c  kv_broadleaf.h  kv_bstree.c  kv_bstree.h  kv_rbtree.c  kv_single_list.c  kve.c  kve.h  log.c  mascii.c  mascii.h  outfile.c  outstream.c  string.c
src/sxproto/: BUILD.bazel  CMakeLists.txt  json.c  parse_sxpb.c  parse_sxpb.h  schema.c  sxpb.c  sxproto2textproto.c  sxproto2textproto_main.c  txtpb.c  value.c  value.h
src/syntax/: BUILD.bazel  defstr.c  defstr.h  line.c  line.h  opt.c  opt.h  symval.c  symval.h
test/: BUILD  BUILD.bazel  CMakeLists.txt  manual.md
test/benchmark/: BUILD  BUILD.bazel  CMakeLists.txt  benchmark.bzl  file_write_read_benchmark.cc  grow_mpop_benchmark.cc  map_benchmark.cc  strchr_benchmark.cc  strcspn_benchmark.cc  strdup_benchmark.cc
test/builtin/: BUILD  BUILD.bazel  CMakeLists.txt  add_float_test.c  bestmatch_edge_test.fildesh  bestmatch_test.c  cmp_test.c  cmptxt_test.c  echocat.c  echocat_test.fildesh  elastic_alt_tee_test.c  elastic_cat.fildesh  elastic_tee.lace  execfd_cat_test.c  execfd_script_test.fildesh  execfd_script_test.lace  execfd_test.c  expect_failure_test.c  fildesh_cli_hello_test.c  fildesh_usage_test.c  godo_test.c  integers.txt  lace_cli_hello_test.c  lace_usage_test.c  oargz_test.c  replace_string_test.fildesh  sponge_test.sh  sshall_test.c  summed_integers.txt  time2sec_test.c  transpose_tab_test.fildesh  transpose_test.c  ujoin_misdup_test.fildesh  ujoin_test.c  void_test.c  waitdo_test.c  xargz_alias_test.fildesh  xpipe_nested.fildesh  xpipe_nested.lace  xpipe_nested_test.fildesh  (+1 more)
test/cc/: BUILD.bazel  CMakeLists.txt  ifstream_test.cc  istream_test.cc  ostream_test.cc  string_test.cc
test/compat/: BUILD  BUILD.bazel  CMakeLists.txt  fd_move_off_stdio_test.c  random_bytes_test.c  sh_escape_argv_test.c  sh_setenv_test.c  string_byte_translate_test.c  tmpdir_test.c
test/cx/: BUILD.bazel  CMakeLists.txt  bittable.h  bittable_test.c  bstree.c  bstree.h  int_int_map.c  lgtable.h  lgtable_test.c  rbtree.c  rbtree.h  rbtree_test.c  synhax.h  table.h  table_test.c  urandom.c
test/example/: BUILD.bazel  CMakeLists.txt  args.txt  args2.txt  args_forkonly_test.fildesh  convoluted.txt  example.bzl  name.txt  test.txt
test/expect/: BUILD  BUILD.bazel  args.txt  args2.txt  familiar.txt  silly.txt  xpipe_nested.txt
test/fault/: BUILD  BUILD.bazel  CMakeLists.txt  barrier_bail_test.fildesh  executable_bytes_of_test.fildesh  false_test.fildesh  false_test.lace  fault.bzl  include_missing_test.fildesh  include_missing_test.lace  pump_executable_bytes_oxf_test.fildesh
test/flag/: BUILD  BUILD.bazel  CMakeLists.txt  named_arg_test.fildesh  nullary_test.fildesh  option_filename_test.fildesh  option_test.fildesh  setenv_test.fildesh  stdargz_test.fildesh  stdio_test.fildesh  version_test.fildesh
test/fuzz/: BUILD  BUILD.bazel  CMakeLists.txt  fuzz.bzl  fuzz_common.c  fuzz_common.h  fuzz_main.c  grow_mpop_fuzz_test.c  kv_broadleaf_bstree_fuzz_test.c  kv_broadleaf_bstree_smoke_test.c  kv_broadleaf_rbtree_fuzz_test.c  kv_broadleaf_rbtree_smoke_test.c  kv_bstree_fuzz_test.c  kv_bstree_smoke_test.c  kv_direct_fuzz_test.c  kv_direct_smoke_test.c  kv_ensure_fuzz_test.c  kv_ensure_smoke_test.c  kv_fuzz_common.c  kv_fuzz_common.h  kv_rbtree_smoke_test.c  kv_single_list_fuzz_test.c  kv_single_list_smoke_test.c  mascii_fuzz_test.c  parse_fildesh_line_fuzz_test.c  parse_sxpb_fuzz_test.c  parse_sxpb_smoke_test.c  parse_sxproto_fuzz_test.c  parse_sxproto_smoke_test.c  smoke_common.h
test/lab/: accept.fildesh  allnames  format-passwd.fildesh  gradelab.sh  lab330.txt  names  pairgen.fildesh  pairup.fildesh  turnin.fildesh
test/lib/: BUILD.bazel  CMakeLists.txt  array_test.c  kv_rbtree_test.c  kv_rbtree_validation.c  kv_rbtree_validation.h  kv_single_list_test.c  string_test.c
test/manual/: README.md  bigfiles.fildesh  grepsrc.fildesh  leak_check.fildesh  lint.fildesh  (+1 more)
tool/: BUILD  BUILD.bazel  CMakeLists.txt  argspawn.c  cembed.c  comparispawn.bzl  comparispawn.c  cswitch.c  expectish.c  fildespawn.c  optional_setting.bzl  pipem.c  shout.c  spawn.bzl  spawn.c
(+272 files in other folders)
