
alias(
    name = "fildesh",
    actual = "//src:fildesh",
    visibility = ["//visibility:public"],
)

alias(
    name = "fildespawn",
    actual = "//tool:fildespawn",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "fildesh_compat_lib",
    srcs = [
        "//compat:errno.c",
        "//compat:env.c",
        "//compat:fd.c",
        "//compat:fd_exclusive.h",
        "//compat:file.c",
        "//compat:kill.c",
        "//compat:random.c",
        "//compat:sh.c",
        "//compat:string.c",
        "//compat:tmpdir.c",
        "//include/fildesh:fildesh_compat_errno.h",
        "//include/fildesh:fildesh_compat_fd.h",
        "//include/fildesh:fildesh_compat_file.h",
        "//include/fildesh:fildesh_compat_random.h",
        "//include/fildesh:fildesh_compat_sh.h",
        "//include/fildesh:fildesh_compat_string.h",
    ],
    includes = ["include"],
    linkopts = select({
        "@platforms//os:windows": [
            "-DEFAULTLIB:advapi32.lib",  # For RtlGenRandom().
        ],
        "//conditions:default": ["-pthread"],
    }),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "fildesh_lib",
    srcs = [
        "//include/fildesh:fildesh.h",
        "//src/lib:alloc.c",
        "//src/lib:array.c",
        "//src/lib:infile.c",
        "//src/lib:instream.c",
        "//src/lib:kve.c",
        "//src/lib:kve.h",
        "//src/lib:kv.c",
        "//src/lib:kv.h",
        "//src/lib:kv_single_list.c",
        "//src/lib:log.c",
        "//src/lib:mascii.c",
        "//src/lib:mascii.h",
        "//src/lib:outfile.c",
        "//src/lib:outstream.c",
        "//src/lib:string.c",
    ],
    includes = ["include"],
    deps = [":fildesh_compat_lib"],
    visibility = ["//visibility:public"],
)


cc_library(
    name = "fildesh_tool_lib",
    srcs = [
        "//include:fildesh_posix_thread.h",
        "//include:fildesh_tool.h",
        "//tool:pipem.c",
    ],
    includes = ["include"],
    deps = [":fildesh_compat_lib"],
    visibility = ["//visibility:public"],
)
