module(
    name = "fildesh",
    version = "0.1.1",
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "0.0.4")

#bazel_dep(name = "bazel_skylib", version = "1.1.1", dev_dependency = True)
bazel_dep(name = "google_benchmark", version = "1.6.1", dev_dependency = True)
#bazel_dep(name = "rules_fuzzing", version = "0.3.1", dev_dependency = True)

