workspace(name = "fildesh")

load("//:workspace.bzl", "fildesh_dev_dependencies")
fildesh_dev_dependencies(bzlmod_on=False)

load("@rules_fuzzing//fuzzing:repositories.bzl", "rules_fuzzing_dependencies")
rules_fuzzing_dependencies()
load("@rules_fuzzing//fuzzing:init.bzl", "rules_fuzzing_init")
rules_fuzzing_init()
