load("//tool/bazel:optional_setting.bzl", "optional_setting")


optional_setting(
    name = "full_benchmarking_on",
    flag_name = "enable_full_benchmarking",
    visibility = ["//test/benchmark:__subpackages__"],
)

optional_setting(
    name = "full_fuzzing_on",
    flag_name = "enable_full_fuzzing",
    visibility = ["//test/fuzz:__subpackages__"],
)
